--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,26 +1,27 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Checkmate</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_open">打开navigation drawer</string>
+    <string name="navigation_drawer_close">关闭 navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">设置</string>
 
 
-    <string name="menu_home">Home</string>
+    <string name="menu_home">主页</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_logout">Logout</string>
+    <string name="menu_logout">注销</string>
     <string name="title_activity_login">LoginActivity</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+    <string name="prompt_email">邮箱</string>
+    <string name="prompt_password">密码</string>
+    <string name="action_sign_in">登录或注册</string>
+    <string name="action_sign_in_short">登录</string>
+    <string name="welcome">"欢迎 !"</string>
+    <string name="invalid_username">非法用户</string>
+    <string name="invalid_password">密码必须大于5个字符</string>
+    <string name="login_failed">"登录失败"</string>
     <string name="title_activity_register">RegisterActivity</string>
 
 
@@ -114,16 +115,14 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="title_activity_main2">MainActivity2</string>
-    <string name="title_home">Home</string>
+    <string name="title_home">主页</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-    <string name="title_chat">Chat</string>
-    <string name="title_search">Search</string>
+    <string name="title_notifications">提醒</string>
+    <string name="title_chat">聊天</string>
+    <string name="title_search">搜索</string>
 
-    <string name="post_title">Please Enter Your Title</string>
-    <string name="post_content">Here the content here</string>
-    <string name="view_more">View More</string>
-    <string name="recommendation">Recommendation</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="post_title">输入标题</string>
+    <string name="post_content">输入内容</string>
+    <string name="view_more">查看更多</string>
+    <string name="recommendation">推荐</string>
 </resources>
