--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -125,4 +125,5 @@
     <string name="post_content">输入内容</string>
     <string name="view_more">查看更多</string>
     <string name="recommendation">推荐</string>
+    <string name="content_description_add_post">发布笔记</string>
 </resources>
