--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -18,6 +18,7 @@
     <string name="prompt_password">密码</string>
     <string name="action_sign_in">登录或注册</string>
     <string name="action_sign_in_short">登录</string>
+    <string name="action_register">注册</string>
     <string name="welcome">"欢迎 !"</string>
     <string name="invalid_username">非法用户</string>
     <string name="invalid_password">密码必须大于5个字符</string>
