--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_logout">注销</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="title_calendar_login">CalendarActivity</string>
     <string name="prompt_email">邮箱</string>
     <string name="prompt_password">密码</string>
     <string name="action_sign_in">登录或注册</string>
