--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_logout">Logout</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_calendar_login">CalendarActivity</string>
+    <string name="title_dashboard">Dashboard</string>
     <string name="prompt_email">Username</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
