--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,10 +166,10 @@
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
     <string name="logout">Logout</string>
-    <string name="confirm">Confirm</string>
     <string name="name">Name</string>
     <string name="enter_your_username">Enter your username</string>
     <string name="username">USERNAME</string>
+    <string name="message">message</string>
 
     <string-array name="note_list_sort">
         <item>Default</item>
